@@ -1253,6 +1253,15 @@ function EnableDisableTabs()
 			else {
 				SetLanguage('en');
 			}
+			if (typeof data.MobileType != 'undefined') {
+				if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+					$.myglobals.ismobile=true;
+					$.myglobals.ismobileint=true;
+				}			
+				if (data.MobileType!=0) {
+					$.myglobals.ismobile=false;
+				}
+			}			
 			if (data.result["EnableTabLights"]==0) {
 				$("#mLightSwitches").hide();
 			}
