@@ -88,6 +88,17 @@
 			</tr>
 			</table>
 			<br>
+			<h2><span data-i18n="Mobile"></span>:</h2>
+			<table class="display" id="mobilemodetable" border="0" cellpadding="0" cellspacing="0">
+			<tr>
+				<td align="right" style="width:60px"><label><span data-i18n="Mode"></span>: </label></td>
+				<td><select id="combosmobiletype" name="MobileType" style="width:120px" class="combobox ui-corner-all">
+					<option data-i18n="Mobile" value="0">Mobile</option>
+					<option data-i18n="Dashboard" value="1">Dashboard</option>
+				</select></td>
+			</tr>
+			</table>
+			<br>
 			<h2><span data-i18n="WebsiteProtection"></span>:</h2>
 			<table class="display" id="webtable" border="0" cellpadding="0" cellspacing="0">
 			<tr>
@@ -511,6 +522,9 @@ function ShowSettings()
       }
       if (typeof data.DashboardType != 'undefined') {
         $("#dashmodetable #combosdashtype").val(data.DashboardType);
+      }
+      if (typeof data.MobileType != 'undefined') {
+        $("#mobilemodetable #combosmobiletype").val(data.MobileType);
       }
       if (typeof data.WebUserName != 'undefined') {
         $("#webtable #WebUserName").val(data.WebUserName);
