@@ -3103,7 +3103,7 @@ function ShowUtilities()
   $('#utilitycontent').i18n();
 
 	if (window.my_config.userrights==2) {
-		if ($.myglobals.ismobile==false) {
+		if ($.myglobals.ismobileint==false) {
 			$("#utilitycontent .span4").draggable({
 					drag: function() {
 						clearInterval($.myglobals.refreshTimer);
